--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "core-js": "^3.35.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/core-js": "^2.5.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
