--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.17.0",
     "core-js": "^3.35.0",
     "next": "14.0.4",
     "react": "^18",
