--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@azure/storage-blob": "^12.17.0",
     "@vercel/analytics": "^1.1.2",
+    "@vercel/blob": "^0.19.0",
     "core-js": "^3.35.0",
     "next": "14.0.4",
     "react": "^18",
