--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@azure/storage-blob": "^12.17.0",
-    "@vercel/analytics": "^1.1.2",
     "@vercel/blob": "^0.19.0",
+    "@vercel/postgres": "^0.7.2",
     "core-js": "^3.35.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.21.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
