--- a/.env
+++ b/.env
@@ -1,1 +1,20 @@
-STORAGE_ACCOUNT_CONNECTION_STRING='[Secret]'
+# POSTGRES_URL="postgres://default:arVZB7H5mAlC@ep-flat-glitter-a4dadjur-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+# POSTGRES_PRISMA_URL="postgres://default:arVZB7H5mAlC@ep-flat-glitter-a4dadjur-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+# POSTGRES_URL_NO_SSL="postgres://default:arVZB7H5mAlC@ep-flat-glitter-a4dadjur-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+# POSTGRES_URL_NON_POOLING="postgres://default:arVZB7H5mAlC@ep-flat-glitter-a4dadjur.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+# POSTGRES_USER="default"
+# POSTGRES_HOST="ep-flat-glitter-a4dadjur-pooler.us-east-1.aws.neon.tech"
+# POSTGRES_PASSWORD="arVZB7H5mAlC"
+# POSTGRES_DATABASE="verceldb"
+
+#POSTGRES_PRISMA_URL="postgres://default:Purple123@localhost:5432/postgres?connection_limit=5"
+#POSTGRES_URL_NON_POOLING=
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="postgresql://postgres:Purple123@localhost:5432/postgres?schema=public"
