--- a/package.json
+++ b/package.json
@@ -6,29 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@azure/storage-blob": "^12.17.0",
-    "@vercel/blob": "^0.19.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@prisma/client": "^5.9.1",
     "@vercel/postgres": "^0.7.2",
-    "core-js": "^3.35.0",
-    "next": "14.0.4",
+    "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18",
-    "react-query": "^3.39.3",
-    "react-router-dom": "^6.21.3",
-    "uuid": "^9.0.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/core-js": "^2.5.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/uuid": "^9.0.7",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "sass": "^1.69.7",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "prisma": "^5.9.1",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
