--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@prisma/client": "^5.9.1",
     "@vercel/postgres": "^0.7.2",
+    "core-js": "^3.36.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/core-js": "^2.5.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
