--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@prisma/client": "^5.9.1",
     "@vercel/postgres": "^0.7.2",
+    "classnames": "^2.5.1",
     "core-js": "^3.36.0",
     "next": "14.1.0",
     "react": "^18",
