--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "core-js": "^3.36.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/core-js": "^2.5.8",
